# google-sheets-functions

./: .gitignore  DEPLOYMENT_FIX.md  GOOGLE_SHEETS_API_KEY_FIX.md  PERMISSION_CHECKLIST.md  PERMISSION_SETUP.md  PROJECT NOTES FOR AI.md  PROJECT_SUMMARY.md  QBFC16 COM OLE Data.IDL  README.md  WEBAPP_TROUBLESHOOTING.md  package-lock.json  package.json  tsconfig.json
Google_Sheet_Function/config/: config.toml
Google_Sheet_Function/src/: Code.ts  config.rs
config/: config.toml
quickbooks-rust-service/: .gitignore  ACCOUNT_HIERARCHY.md  AUTHENTICATION.md  BEGINSESSION_TROUBLESHOOTING.md  C++_SDK_ANALYSIS.md  CLEANUP_RESULTS.md  Cargo.toml  DEPENDENCY_CLEANUP.md  DEVELOPMENT_ENVIRONMENT.md  FIGMENT_MIGRATION.md  INTEGRATION_TEST_RESULTS.md  PROJECT_COMPLETE.md  QUICKBOOKS_CONNECTION.md  QUICKBOOKS_SDK_COMPLETE.md  QUICKBOOKS_SDK_INTEGRATION.md  QUICKBOOKS_SDK_SETUP.md  README.md  SERVICE_FEEDBACK.md  TESTING_GUIDE.md  WINDOWS_BUILD.md  WINDOWS_BUILD_SUCCESS.md  WINDOWS_COM_FIX.md  WINDOWS_DEPLOYMENT.md  WINDOWS_PATHS.md  config.json  libsafe_variant.rlib  setup.sh  test_safe_variant.rs  troubleshoot.bat  variant-rs implementation plan.md  winapi migration of COM.md
quickbooks-rust-service/.cargo/: config.toml
quickbooks-rust-service/OBSOLETE/: cargo.toml
quickbooks-rust-service/OBSOLETE/obsolete_qbfc_safe/: qbfc_request_processor.rs
quickbooks-rust-service/OBSOLETE/obsolete_src/: account_service.rs  com_helpers.rs  com_helpers_new.rs  config.rs  config_figment.rs  main.rs  qbxml_request_processor.rs  safe_variant.rs  safe_variant_backup.rs  safe_variant_minimal.rs  safe_variant_new.rs  safe_variant_oaidl.rs  safe_variant_simple.rs
quickbooks-rust-service/config/: config.example.toml  config.mock.toml  config.test.toml  config.toml  path_test.toml
quickbooks-rust-service/src/: com_helpers.rs  com_helpers_simple.rs  config.rs  config_test.rs  file_mode.rs  google_sheets.rs  high_level_client.rs  lib.rs  lib_simple.rs  main.rs  main.rs.bak  main_account_query.rs  main_clean.rs  main_old.rs  qbxml_request_processor.rs  quickbooks.rs  quickbooks.rs.bak  quickbooks.rs.new  quickbooks_clean.rs  quickbooks_old.rs  request_processor.rs  sheets.rs
quickbooks-rust-service/src/qbfc_safe/: mod.rs  qbfc_safe_variant.rs
quickbooks-rust-service/src/qbxml_safe/: mod.rs  qbxml_request_processor.rs  qbxml_safe_variant.rs  safe_variant.rs
