[package]
name = "quickbooks-sheets-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qb_sync"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "implement"
]}
windows-core = { version = "0.52" }
