[package]
name = "quickbooks-sheets-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qb_sync"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["toml"] }
winapi = { version = "0.3", features = ["everything"] }
widestring = "1.0"

reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[features]
qbxml = []
